[package]
name = "vkrust"
version = "0.1.0"
authors = ["Raghav Shankar <warpspeedscp@gmail.com>"]

[dependencies]
vulkano = { path = "vulkano/vulkano" }
lazy_static = "*"
image = "*"
tobj = "0.1.6"
itertools = "0.7.8"
vulkano-win = { path = "vulkano/vulkano-win" }
vulkano-shaders = { path = "vulkano/vulkano-shaders" }
winit = "0.18"
log = "0.4"
cgmath = "*"
ordered-float = "1.0.1"
rusttype = "0.7.5"
